{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 8,
  "lineage": "56299e05-9912-5261-8687-3ea442e0f34e",
  "resources": [
    {
      "module": "module.ec2_prov",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035b3c7efe6d061d5",
            "arn": "arn:aws:ec2:us-east-1:977761437422:instance/i-049a19cb1cae5591d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-049a19cb1cae5591d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kt",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-026e9392c571050fa",
            "private_dns": "ip-10-0-1-71.ec2.internal",
            "private_ip": "10.0.1.71",
            "public_dns": "ec2-44-192-118-247.compute-1.amazonaws.com",
            "public_ip": "44.192.118.247",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04fb641f4aaaeec85",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0822926c8b79b29bf",
            "tags": {
              "Name": "Ec2-with-VPC"
            },
            "tags_all": {
              "Name": "Ec2-with-VPC"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0de81622ab758cfa9"
            ]
          },
          "dependencies": [
            "module.prod_vpc.aws_security_group.allow_ssh",
            "module.prod_vpc.aws_subnet.public_1",
            "module.prod_vpc.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:977761437422:internet-gateway/igw-0de4c599d993f0976",
            "id": "igw-0de4c599d993f0976",
            "owner_id": "977761437422",
            "tags": {
              "Name": "internet-gateway-demo"
            },
            "tags_all": {
              "Name": "internet-gateway-demo"
            },
            "vpc_id": "vpc-00c0d122a14c4e18c"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:977761437422:route-table/rtb-0f7669bc0855ab377",
            "id": "rtb-0f7669bc0855ab377",
            "owner_id": "977761437422",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0de4c599d993f0976",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table-demo"
            },
            "tags_all": {
              "Name": "public-route-table-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c0d122a14c4e18c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_vpc.aws_internet_gateway.gw",
            "module.prod_vpc.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f5528b4f653d1d7",
            "route_table_id": "rtb-0f7669bc0855ab377",
            "subnet_id": "subnet-0822926c8b79b29bf"
          },
          "dependencies": [
            "module.prod_vpc.aws_internet_gateway.gw",
            "module.prod_vpc.aws_route_table.route-public",
            "module.prod_vpc.aws_subnet.public_1",
            "module.prod_vpc.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:977761437422:security-group/sg-0de81622ab758cfa9",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de81622ab758cfa9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_SSH",
            "name_prefix": "",
            "owner_id": "977761437422",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00c0d122a14c4e18c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_vpc.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:977761437422:subnet/subnet-0822926c8b79b29bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0822926c8b79b29bf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "977761437422",
            "tags": {
              "Name": "public_1-demo"
            },
            "tags_all": {
              "Name": "public_1-demo"
            },
            "vpc_id": "vpc-00c0d122a14c4e18c"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:977761437422:vpc/vpc-00c0d122a14c4e18c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01752fc36bb0ba4e3",
            "default_route_table_id": "rtb-009076d2ff81d9220",
            "default_security_group_id": "sg-02bdff2e2b788cf61",
            "dhcp_options_id": "dopt-02538986a1bd3c53a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00c0d122a14c4e18c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-009076d2ff81d9220",
            "owner_id": "977761437422",
            "tags": {
              "Name": "Vpc-custom-demo"
            },
            "tags_all": {
              "Name": "Vpc-custom-demo"
            }
          }
        }
      ]
    }
  ]
}